--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,9 @@
                                     <a class="nav-link scroll text-left" href="#certificates">CERTIFICATES</a>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link scroll text-left" href="#projects">PROJECTS</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link scroll text-left" href="#skills">SKILLS</a>
                                 </li>
                                 <li class="nav-item">
@@ -53,7 +56,7 @@
                         <div class="row header">
                             <div class="col-md-6">
                                 <div class="photo">
-                                    <img src="./images/img.jpg" alt="">
+                                    <img src="./images/face.jpg" alt="">
                                 </div>
                             </div>
                             <div class="col-md-6 text-left">
@@ -202,12 +205,194 @@
                 </div>
             </section>
 
-            <section style="padding-top:500px;" id="certificates">
-                    certificates
+            <section id="certificates">
+                <div class="title  text-center">
+                    <h2>CERTIFICATES</h2>
+                </div>
+                <div class="container">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                        </ol>
+                        <div class="carousel-inner text-center">
+                            <div class="carousel-item active">
+                                <h1>Microsoft Access</h1>
+                                <h3>West Delta Regional Control Center</h3>
+                                <h5>Egypt</h5>
+                                <p>September 2014</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>Preparation and awarding tenders</h1>
+                                <h3>Administrative Financial Center</h3>
+                                <h5>(Cairo) Egypt</h5>
+                                <p>Jully 2012</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>English Course Level : Intermediate1</h1>
+                                <h3>Administrative Financial Center</h3>
+                                <h5>(Cairo) Egypt</h5>
+                                <p>January 2012</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>Building and Managing effective work team</h1>
+                                <h3>Administrative Financial Center</h3>
+                                <h5>(Cairo) Egypt</h5>
+                                <p>February 2011</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>OPGW & ACCESSORIES TRAINNING</h1>
+                                <h3>Prysmian Cables and Systems</h3>
+                                <h5>(barcelona) Spain</h5>
+                                <p>April 2010</p>
+                            </div>
+                            <div class="carousel-item">
+                                <h1>Leadership & Management Skills</h1>
+                                <h3>Administrative Financial Center</h3>
+                                <h5>(Cairo) Egypt</h5>
+                                <p>September 2010</p>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
             </section>
 
-            <section style="padding-top:500px;background-color: gray;" id="skills">
-                    skills
+            <section id="projects">
+                <div class="title  text-center">
+                    <h2>PROJECTS</h2>
+                </div>
+                <div class="container text-center">
+                    <div class="gallery">
+                        <input type="radio" id="item-type-all" name="radio-set-1" class="item-type-all" checked="checked">
+                        <label for="item-type-all" class="label-type-all">ALL</label>
+
+                        <input type="radio" id="item-type-1" name="radio-set-1" class="item-type-1">
+                        <label for="item-type-1" class="label-type-1">Communication</label>
+
+                        <input type="radio" id="item-type-2" name="radio-set-1" class="item-type-2">
+                        <label for="item-type-2" class="label-type-2">Fiber Optics</label>
+
+                        <input type="radio" id="item-type-3" name="radio-set-1" class="item-type-3">
+                        <label for="item-type-3" class="label-type-3">Over Head Transmision Lines</label>
+                        
+                        <div class="row items">
+                            <div class="col-lg-4 col-sm-6 item item-type-1">
+                                <div class="project">
+                                    <a href="#project1">
+                                        <img src="./images/project1.jpg" alt="project1-image" class="img-fluid">
+                                    </a>
+                                    <div class="project-overlay">
+                                        <h3>Borolos - Itay Al-Baroud</h3>
+                                        <h5>500 KV</h5>
+                                        <h5>105 KM</h5>
+                                        <p>2017</p>
+                                    </div>
+                                    <div class="category">
+                                        OHTL
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 item item-type-3">
+                                <div class="project">
+                                    <a href="#project1">
+                                        <img src="./images/project1.jpg" alt="project1-image" class="img-fluid">
+                                    </a>
+                                    <div class="project-overlay">
+                                        <h3>Borolos - Itay Al-Baroud</h3>
+                                        <h5>500 KV</h5>
+                                        <h5>105 KM</h5>
+                                        <p>2017</p>
+                                    </div>
+                                    <div class="category">
+                                        OHTL
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 item item-type-2">
+                                <div class="project">
+                                    <a href="#project1">
+                                        <img src="./images/project1.jpg" alt="project1-image" class="img-fluid">
+                                    </a>
+                                    <div class="project-overlay">
+                                        <h3>Borolos - Itay Al-Baroud</h3>
+                                        <h5>500 KV</h5>
+                                        <h5>105 KM</h5>
+                                        <p>2017</p>
+                                    </div>
+                                    <div class="category">
+                                        OHTL
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 item item-type-1">
+                                <div class="project">
+                                    <a href="#project1">
+                                        <img src="./images/project1.jpg" alt="project1-image" class="img-fluid">
+                                    </a>
+                                    <div class="project-overlay">
+                                        <h3>Borolos - Itay Al-Baroud</h3>
+                                        <h5>500 KV</h5>
+                                        <h5>105 KM</h5>
+                                        <p>2017</p>
+                                    </div>
+                                    <div class="category">
+                                        OHTL
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 item item-type-2">
+                                <div class="project">
+                                    <a href="#project1">
+                                        <img src="./images/project1.jpg" alt="project1-image" class="img-fluid">
+                                    </a>
+                                    <div class="project-overlay">
+                                        <h3>Borolos - Itay Al-Baroud</h3>
+                                        <h5>500 KV</h5>
+                                        <h5>105 KM</h5>
+                                        <p>2017</p>
+                                    </div>
+                                    <div class="category">
+                                        OHTL
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 item item-type-3">
+                                <div class="project">
+                                    <a href="#project1">
+                                        <img src="./images/project1.jpg" alt="project1-image" class="img-fluid">
+                                    </a>
+                                    <div class="project-overlay">
+                                        <h3>Borolos - Itay Al-Baroud</h3>
+                                        <h5>500 KV</h5>
+                                        <h5>105 KM</h5>
+                                        <p>2017</p>
+                                    </div>
+                                    <div class="category">
+                                        OHTL
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="skills">
+                <div class="title  text-center">
+                    <h2>SKILLS</h2>
+                </div>   
             </section>
 
             <section style="padding-top:500px;" id="contact">
